Setuping initial structure

--- a/angular.json
+++ b/angular.json
@@ -87,12 +87,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "58f3bd70-7b04-41a5-9a0a-3bb004ebce02"
   }
 }
