Setuping tailwind elements lib

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ngx-toastr": "^16.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "tw-elements": "^1.0.0-beta2",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
