--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "angular-animations": "^0.11.0",
     "daisyui": "^2.52.0",
+    "moment": "^2.29.4",
     "ngx-bootstrap": "^10.2.0",
     "ngx-phone-mask-br": "^1.0.3",
     "ngx-spinner": "^15.0.1",
